resources/sass/calendar/inputs.scss
/* ... */
.select2-dropdown {
    background-color: $card-bg-color !important;
}

.select2-container--default .select2-results__option[aria-selected=true] {
    background-color: $action-bg-color !important;
}

.select2-container--default .select2-results__option--highlighted[aria-selected] {
    background-color: $accent-color;
}

.select2-results{

    font-size:0.875rem;
    max-height:400px;

}

.select2-container--default .select2-results > .select2-results__options{
    max-height:400px !important;
}

.placeholder{
    min-height:34px;
    padding:5px;
    margin-bottom:5px;
    background-color: rgba(0,0,0,0.25);
}

.dragged {
    margin-left:1rem;
    position: absolute;
    opacity: 0.5;
    z-index: 2000;
}

.dragged > select{
    display:none;
}

#event_conditions_container {
    height: auto;
}

#event_conditions_container .handle{
    padding:6px;
    order:1;
}

.condition_container .moon_select{
    order:2;
    display:none;
}

.condition_container.Moons .condition_type{
    width:13.5em;
}

.condition_container.Moons .moon_select{
    width:auto;
    display:block;
}

.condition_container .input_container{
    display: inline-flex;
    order:5;
    flex-wrap: wrap;
    flex-grow:1;
    min-width:25%;
}

.condition_container .input_container input{
    order:1;
    width:100%;
}

.condition_container .input_container .nth, .condition_container .input_container .offset{
    order:1;
    width:50%;
}


.trumbowyg-box{
    margin:0;
    border: 1px solid $calendar-border-color;
}

.trumbowyg-button-pane {
    background: $card-bg-color;
    border-bottom: 1px solid $calendar-border-color;
}

.trumbowyg-button-pane .trumbowyg-button-group::after, .trumbowyg-button-pane::after{
    background: $calendar-border-color;
}

.trumbowyg-box svg, .trumbowyg-modal svg {
    fill: $main-text-color;
}

.trumbowyg-button-pane button:not(.trumbowyg-disable):hover, .trumbowyg-button-pane button:not(.trumbowyg-disable):focus, .trumbowyg-button-pane button.trumbowyg-active {
    background: $action-bg-color;
}

.event_occurrences{

    .col1, .col2{
        margin-top:0.5rem;
        margin-bottom:0.5rem;
    }

    .event_occurance{
        list-style-type: initial;
        list-style-position: inside;
        margin-bottom:5px;
    }

}

/* ------------------ Condition styles ----------------- */


.condition_container.Year{
    background-color:#FFEBEE;
}

.condition_container.Month{
    background-color:#E0F2F1;
}

.condition_container.Day{
    background-color:#F1F8E9;
}

.condition_container.Epoch{
    background-color:#ECEFF1;
}

.condition_container.Weekday{
    background-color:#FFFDE7;
}

.condition_container.Week{
    background-color:#FFF3E0;
}

.condition_container.Moons{
    background-color:#E3F2FD;
}

.condition_container.Cycle{
    background-color:#FAFAFA;
}

.flexible_background{
    width:100%;
    height:100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 11;
    position:fixed;
    align-items: center;
    display:none;
}

.blurred_background{
    backdrop-filter: blur(3px);
}

#errors {
    border-radius: 5px;
    padding: 20px;
    width:500px;
    position:relative;
    margin:auto;
    z-index: 10000;
}

#errors {
    background-color: #f44336;
    color: white;
}

/* The close button */
#errors_closebtn {
    margin-left: 15px;
    color: white;
    font-weight: bold;
    float: right;
    font-size: 22px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;
}

/* When moving the mouse over the close button */
#errors_closebtn:hover {
    color: black;
}

.master_button_container{
    position:absolute;
    bottom:-3.5rem;
    left:calc(50% - 11rem);
    width:22rem;
    height:3.5rem;
    background-color: $card-bg-color;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    border:1px solid $calendar-border-color;
}

.sp-replacer{
    height: auto !important;
}

.sp-preview {
    min-height: 30px;
}

